k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-ranges-api
  labels:
    app: ip-ranges-api
spec:
  selector:
    app: ip-ranges-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
